# primer-design-suite

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
copilot/: __init__.py
copilot/agent/: __init__.py  loop.py  providers.py  schemas.py  system_prompt.py
copilot/app/: __init__.py  main.py
data/public/: ATTRIBUTIONS.md
data/public/openprimer/: openprimer_ighv.provenance.yaml
docs/: model_card_head_a.md  model_card_head_b.md  specificity_notes.md
predictor/: __init__.py
predictor/models/: __init__.py  baselines.py  boosting.py  cnn.py
predictor/pipeline/: __init__.py  evaluate.py  featurize.py  head_a.py  head_b.py  predict.py  simulate.py  train.py
predictor/workflows/: Snakefile
predictor/workflows/configs/: config.yaml
primer_core/: __init__.py  featurize.py
primer_core/features/: __init__.py  annealing.py  composition.py  kmer.py  specificity.py  structure.py  thermo.py
primer_core/io/: __init__.py  datasets.py  ethpcr.py  openprimer.py  schema.py  sequences.py
primer_core/tools/: __init__.py  design.py  score.py  specificity.py  thermo.py
scripts/: build_ighv_blastdb.py  make_figures.py
tests/: __init__.py  test_annealing.py  test_app.py  test_composition.py  test_copilot.py  test_featurize.py  test_io.py  test_kmer_ethpcr.py  test_pipeline.py  test_specificity.py  test_structure.py  test_thermo.py  test_tools.py
